assets/insurance/insurance-usecase-type-apigw/Applications/APIGateway/virtualServices/gateway-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vadigcs61730.eur.ad.sag"
