assets/insurance/insurance-usecase-type-apigw/Applications/APIGateway/virtualServices/vs-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "vadigcs61730.eur.ad.sag"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /gateway/rewards123/
    rewrite:
      uri: /gateway/rewards/
    route:
    - destination:
        host: api-gateway.insurance.svc.cluster.local
        port:
          number: 5555    
  - match:
    - uri:
        prefix: /gateway
    route:
    - destination:
        port:
          number: 5555
        host: api-gateway.insurance.svc.cluster.local
